--- a/source/package.json
+++ b/source/package.json
@@ -18,6 +18,7 @@
     "lodash": "^4.17.20",
     "mongoose": "^5.10.6",
     "mongoose-auto-increment": "^5.0.1",
+    "nodemailer": "^6.4.16",
     "request": "^2.88.2"
   },
   "devDependencies": {
